--- a/CourseFeedback/WebContent/test.xhtml
+++ b/CourseFeedback/WebContent/test.xhtml
@@ -8,6 +8,7 @@
 		<h:inputText value="#{feedback.value}"></h:inputText>
 		<h:commandButton type="submit" value="Save"
 			action="#{basicFeedbackManager.saveFeedback(feedback)}"></h:commandButton>
+			#{feedback.value}
 	</h:form>
 </h:body>
 </html>
