--- a/CourseFeedback/WebContent/feedbackBar.xhtml
+++ b/CourseFeedback/WebContent/feedbackBar.xhtml
@@ -11,7 +11,7 @@ xmlns:p="http://primefaces.org/ui">
 </h:head>  
           
 <h:body>
-	<p:barChart id="basic" value="#{feedbackBar.createCategoryModel(feedback)}" legendPosition="ne" title="Feedback Bar"/>
+	<p:barChart id="basic" value="#{feedbackBar.createCategoryModel(basicFeedbackManager.allFeedbacks)}" legendPosition="ne" title="Feedback Bar"/>
 	<p:editor rendered="false"/>
 
 </h:body>  
