--- a/CourseFeedback/WebContent/feedbackBar.xhtml
+++ b/CourseFeedback/WebContent/feedbackBar.xhtml
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="ISO-8859-1" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml"  
-xmlns:h="http://java.sun.com/jsf/html"  
-xmlns:f="http://java.sun.com/jsf/core"  
-xmlns:p="http://primefaces.org/ui">  
-      
-<h:head>  
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />  
-</h:head>  
-          
-<h:body>
-	<p:barChart id="basic" value="#{feedbackBar.createCategoryModel(basicFeedbackManager.allFeedbacks)}" legendPosition="ne" title="Feedback Bar"/>
-	<p:editor rendered="false"/>
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:p="http://primefaces.org/ui">
 
-</h:body>  
+<h:head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+</h:head>
+
+<h:body>
+	<p:barChart id="basic"
+		value="#{feedbackBar.createCategoryModel(basicFeedbackManager.allFeedbacks)}"
+		legendPosition="ne" title="Feedback Bar" />
+	<p:editor rendered="false" />
+	<h:button value="Enter a new value" outcome="input-value">
+	</h:button>
+</h:body>
 </html>
 
 <!-- Comments: style="height:500px;width:500px" -->
