--- a/CourseFeedback/WebContent/search-courses-by-teacher.xhtml
+++ b/CourseFeedback/WebContent/search-courses-by-teacher.xhtml
@@ -12,6 +12,7 @@
 
 <h:body>
 	<h:form>
+		<h:outputLabel value="Teacher's name: " />
 		<h:inputText value="#{basicCourseManager.searchTerm}" />
 		<h:outputText value="#{basicCourseManager.searchTerm}" />
 	</h:form>
