--- a/CourseFeedback/WebContent/add-course.xhtml
+++ b/CourseFeedback/WebContent/add-course.xhtml
@@ -12,6 +12,8 @@
 </h:head>
 
 <h:body>
+	<ui:include src="/header.xhtml" />
+
 	<h:form>
 		<h:outputLabel value="Course name "></h:outputLabel>
 		<h:inputText value="#{course.name}"></h:inputText>
