--- a/CourseFeedback/WebContent/teacher-index.xhtml
+++ b/CourseFeedback/WebContent/teacher-index.xhtml
@@ -16,7 +16,7 @@
 	<h:link value="Add course" outcome="add-course" />
 	<br />
 
-	<h:link value="Show courses" outcome="get-courses" />
+	<h:link value="Show courses" outcome="course-list" />
 	<br />
 </h:body>
 </html>
