--- a/CourseFeedback/WebContent/course-list.xhtml
+++ b/CourseFeedback/WebContent/course-list.xhtml
@@ -1,30 +1,16 @@
-<?xml version="1.0" encoding="ISO-8859-1" ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!-- Display a list of courses -->
+<!-- Uses courseList variable to get the list of courses -->
 
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html"
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:p="http://primefaces.org/ui"
-	xmlns:c="http://java.sun.com/jsp/jstl/core"
-	xmlns:ui="http://java.sun.com/jsf/facelets">
-
-<h:head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-</h:head>
-
-<h:body>
-	<ui:include src="/header.xhtml" />
-
-	<h:form>
-		<c:forEach items="#{basicCourseManager.courses}" var="course">
-			<h:outputLink value="course-page.xhtml">
-				<f:param name="courseid" value="#{course.courseId}" />
-				<h:outputText value="#{course.name}" />
-			</h:outputLink>
-			<br />
-		</c:forEach>
-	</h:form>
-	<br />
-	<ui:include src="/footer.xhtml"></ui:include>
-</h:body>
-</html>
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:c="http://java.sun.com/jsp/jstl/core">
+	<c:forEach items="#{courseList}" var="course">
+		<h:outputLink value="course-page.xhtml">
+			<f:param name="courseid" value="#{course.courseId}" />
+			<h:outputText value="#{course.name}" />
+		</h:outputLink>
+		<br />
+	</c:forEach>
+</ui:composition>
