--- a/CourseFeedback/WebContent/search-results.xhtml
+++ b/CourseFeedback/WebContent/search-results.xhtml
@@ -1,10 +1,12 @@
+<?xml version="1.0" encoding="ISO-8859-1" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui"
-	xmlns:ui="http://java.sun.com/jsf/facelets">
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+	xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
 
 <h:head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -13,13 +15,13 @@
 <h:body>
 	<ui:include src="/header.xhtml" />
 
-	<h:link value="Add course" outcome="add-course" />
+	<c:set var="courseList"
+		value="#{basicCourseManager.getCoursesByTeacherName(basicCourseManager.searchTerm)}" />
+
+	<ui:include src="/course-list.xhtml"></ui:include>
+
 	<br />
 
-	<h:link value="Show courses" outcome="all-courses" />
-	<br />
-
-	<h:link value="Add student" outcome="input-student" />
-	<br />
+	<ui:include src="/footer.xhtml" />
 </h:body>
 </html>
