--- a/CourseFeedback/WebContent/input-student.xhtml
+++ b/CourseFeedback/WebContent/input-student.xhtml
@@ -1,6 +1,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:c="http://java.sun.com/jsp/jstl/core">
+	xmlns:c="http://java.sun.com/jsp/jstl/core"
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
 
 <h:head>
@@ -9,14 +10,28 @@
 <h:body>
 	<h:form>
 		<p>Database contents:</p>
-			<c:forEach items="#{studentManager.getAllStudents()}" var="student">
-				<p><h:outputText value="#{student.id}" /> : <h:outputText value="#{student.studentNumber}" /> : <h:outputText value="#{student.studentEmail}" /></p>
-			</c:forEach>
-		<p>Student number: <h:inputText value="#{student.studentNumber}"></h:inputText> </p> 
-		<p>Student email: <h:inputText value="#{student.studentEmail}"></h:inputText> </p> 
-		<h:commandButton type="submit" value="Save" action="#{studentManager.addStudentToSystem(student.studentNumber, student.studentEmail)}"></h:commandButton>
-		
+		<c:forEach items="#{studentManager.getAllStudents()}" var="student">
+			<p>
+				<h:outputText value="#{student.id}" />
+				:
+				<h:outputText value="#{student.studentNumber}" />
+				:
+				<h:outputText value="#{student.studentEmail}" />
+			</p>
+		</c:forEach>
+		<p>
+			Student number:
+			<h:inputText value="#{student.studentNumber}"></h:inputText>
+		</p>
+		<p>
+			Student email:
+			<h:inputText value="#{student.studentEmail}"></h:inputText>
+		</p>
+		<h:commandButton type="submit" value="Save"
+			action="#{studentManager.addStudentToSystem(student.studentNumber, student.studentEmail)}"></h:commandButton>
 	</h:form>
+
+	<ui:include src="/footer.xhtml" />
 </h:body>
 </html>
 
