--- a/CourseFeedback/WebContent/teacher-index.xhtml
+++ b/CourseFeedback/WebContent/teacher-index.xhtml
@@ -22,7 +22,7 @@
 	<h:link value="Add student" outcome="input-student" />
 	<br />
 
-	<h:link value="Add students(Excell document)" outcome="upload-student-table" />
+	<h:link value="Add students(Excel document)" outcome="upload-student-table" />
 	<br />
 </h:body>
 </html>
