Refactoring    - Separated "Add student" and "Show student" links in teacher index    - Changed some .xhtml names

--- a/CourseFeedback/WebContent/teacher-index.xhtml
+++ b/CourseFeedback/WebContent/teacher-index.xhtml
@@ -19,10 +19,10 @@
 	<h:link value="Show courses" outcome="all-courses" />
 	<br />
 
-	<h:link value="Add student" outcome="input-student" />
+	<h:link value="Show students" outcome="all-students" />
 	<br />
 
-	<h:link value="Add students(Excel document)" outcome="uploader" />
+	<h:link value="Add students" outcome="add-students" />
 	<br />
 </h:body>
 </html>
