Added empty my course page (For teacher profile)

--- a/CourseFeedback/WebContent/my-courses.xhtml
+++ b/CourseFeedback/WebContent/my-courses.xhtml
@@ -13,20 +13,6 @@
 <h:body>
 	<ui:include src="/header.xhtml" />
 
-	<h:link value="Add course" outcome="add-course" />
-	<br />
-
-	<h:link value="Show courses" outcome="all-courses" />
-	<br />
-
-	<h:link value="Show students" outcome="all-students" />
-	<br />
-
-	<h:link value="Add students" outcome="add-students" />
-	<br />
-
-	<!-- Teacher profile -->
-	<h:link value="My courses" outcome="my-courses" />
-	<br />
+	<ui:include src="/footer.xhtml" />
 </h:body>
 </html>
