Added login manager Teacher Username checking works

--- a/CourseFeedback/WebContent/teacher-index.xhtml
+++ b/CourseFeedback/WebContent/teacher-index.xhtml
@@ -25,6 +25,9 @@
 	<h:link value="Add students" outcome="add-students" />
 	<br />
 
+	<h:link value="Login" outcome="login-page" />
+	<br />
+
 	<!-- Teacher profile -->
 	<h:link value="My courses" outcome="my-courses" />
 	<br />
