Added    Teacher registration    Teacher username and password check

--- a/CourseFeedback/WebContent/teacher-index.xhtml
+++ b/CourseFeedback/WebContent/teacher-index.xhtml
@@ -25,6 +25,9 @@
 	<h:link value="Add students" outcome="add-students" />
 	<br />
 
+	<h:link value="Register" outcome="register-teacher" />
+	<br />
+
 	<h:link value="Login" outcome="login-page" />
 	<br />
 
