--- a/CourseFeedback/WebContent/register-teacher.xhtml
+++ b/CourseFeedback/WebContent/register-teacher.xhtml
@@ -7,11 +7,11 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets">
 
 <h:head>
-	<title>login Form</title>
+	<title>Register teacher</title>
 </h:head>
 
 <h:body>
-	<h:form name="LoginForm">
+	<h:form name="Register teacher form">
 		<p>
 			<strong>Username:</strong>
 			<h:inputText value="#{teacher.userName}" />
@@ -21,12 +21,11 @@
 			<h:inputText value="#{teacher.password}" />
 		</p>
 
-		<h:commandButton value="Login"
-			action="#{basicTeacherLoginManager.login(teacher)}" />
+		<h:commandButton value="Register"
+			action="#{basicTeacherRegistrationManager.register(teacher)}" />
 	</h:form>
 
 	<ui:include src="/footer.xhtml" />
-
 </h:body>
 </html>
 
