Added teacher login

--- a/CourseFeedback/WebContent/header.xhtml
+++ b/CourseFeedback/WebContent/header.xhtml
@@ -5,9 +5,18 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:ui="http://java.sun.com/jsf/facelets">
 
+	<h:outputText value="Logged as #{teacherSession.userName}" />
+	<br />
+
 	<h:form>
+		<h:commandButton value="Logout"
+			action="#{basicTeacherLoginManager.logout}" />
+
+		<br />
+
 		<h:inputText value="#{basicCourseManager.searchTerm}" />
 		<h:commandButton value="Search" action="search-results" />
+
 		<br />
 		<br />
 	</h:form>
