--- a/CourseFeedback/WebContent/register-teacher.xhtml
+++ b/CourseFeedback/WebContent/register-teacher.xhtml
@@ -11,6 +11,9 @@
 </h:head>
 
 <h:body>
+	<ui:include src="/header.xhtml" />
+	<br />
+
 	<h:form name="Register teacher form">
 		<p>
 			<strong>Username:</strong>
