--- a/CourseFeedback/WebContent/login-page.xhtml
+++ b/CourseFeedback/WebContent/login-page.xhtml
@@ -11,6 +11,9 @@
 </h:head>
 
 <h:body>
+	<ui:include src="/header.xhtml" />
+	<br />
+
 	<h:form name="LoginForm">
 		<p>
 			<strong>Username:</strong>
