--- a/CourseFeedback/WebContent/teacher-index.xhtml
+++ b/CourseFeedback/WebContent/teacher-index.xhtml
@@ -4,7 +4,8 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui"
-	xmlns:ui="http://java.sun.com/jsf/facelets">
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
 
 <h:head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -12,6 +13,7 @@
 
 <h:body>
 	<ui:include src="/header.xhtml" />
+
 
 	<h:link value="Add course" outcome="add-course" />
 	<br />
