--- a/CourseFeedback/WebContent/add-course.xhtml
+++ b/CourseFeedback/WebContent/add-course.xhtml
@@ -12,24 +12,17 @@
 </h:head>
 
 <h:body>
-	<ui:include src="/header.xhtml" />
-
 	<h:form>
-		<h:outputLabel value="Course name "></h:outputLabel>
-		<h:inputText value="#{course.name}"></h:inputText>
-
-		<br />
-
-		<h:outputLabel value="Teacher's name "></h:outputLabel>
-		<h:inputText value="#{teacher.name}"></h:inputText>
+		<h:outputLabel value="Course name " />
+		<h:inputText value="#{course.name}" />
 
 		<br />
 
 		<h:commandButton type="submit"
-			action="#{basicCourseManager.addCourse(course,teacher)}"
-			value="Save course"></h:commandButton>
+			action="#{basicTeacherManager.addCourseToTeacher(teacherSession,course)}"
+			value="Save course" />
 	</h:form>
 	<br />
-	<ui:include src="/footer.xhtml"></ui:include>
+	<ui:include src="/footer.xhtml" />
 </h:body>
 </html>
