--- a/CourseFeedback/WebContent/my-courses.xhtml
+++ b/CourseFeedback/WebContent/my-courses.xhtml
@@ -1,18 +1,11 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml"
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:p="http://primefaces.org/ui"
-	xmlns:ui="http://java.sun.com/jsf/facelets">
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
 
-<h:head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-</h:head>
+	<c:set var="courseList" value="#{teacherSession.courses}" />
 
-<h:body>
-	<ui:include src="/header.xhtml" />
-
-	<ui:include src="/footer.xhtml" />
-</h:body>
-</html>
+	<ui:include src="/course-list.xhtml" />
+</ui:composition>
