--- a/CourseFeedback/WebContent/teacher-registration.xhtml
+++ b/CourseFeedback/WebContent/teacher-registration.xhtml
@@ -7,14 +7,14 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets">
 
 <h:head>
-	<title>login Form</title>
+	<title>Register teacher</title>
 </h:head>
 
 <h:body>
-	<ui:include src="/header.xhtml" />
-	<br />
-
-	<h:form name="LoginForm">
+	<h:form name="Register teacher form">
+		<h2>
+			<h:outputLabel value="Register" />
+		</h2>
 		<p>
 			<strong>Username:</strong>
 			<h:inputText value="#{teacher.userName}" />
@@ -24,12 +24,11 @@
 			<h:inputText value="#{teacher.password}" />
 		</p>
 
-		<h:commandButton value="Login"
-			action="#{basicTeacherLoginManager.login(teacher)}" />
+		<h:commandButton value="Register"
+			action="#{basicTeacherRegistrationManager.register(teacher)}" />
 	</h:form>
 
 	<ui:include src="/footer.xhtml" />
-
 </h:body>
 </html>
 
