--- a/CourseFeedback/WebContent/add-course.xhtml
+++ b/CourseFeedback/WebContent/add-course.xhtml
@@ -19,7 +19,7 @@
 		<br />
 
 		<h:commandButton type="submit"
-			action="#{basicTeacherManager.addCourseToTeacher(teacherSession,course)}"
+			action="#{basicTeacherManager.addCourseToTeacher(basicCourseManager,teacherSession,course)}"
 			value="Save course" />
 	</h:form>
 	<br />
