--- a/CourseFeedback/WebContent/add-course.xhtml
+++ b/CourseFeedback/WebContent/add-course.xhtml
@@ -1,28 +1,19 @@
 <?xml version="1.0" encoding="ISO-8859-1" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml"
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:ui="http://java.sun.com/jsf/facelets">
 
-<h:head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-</h:head>
-
-<h:body>
 	<h:form>
-		<h:outputLabel value="Course name " />
 		<h:inputText value="#{course.name}" />
-
-		<br />
-
 		<h:commandButton type="submit"
-			action="#{basicTeacherManager.addCourseToTeacher(basicCourseManager,teacherSession,course)}"
+			action="#{basicTeacherManager.addCourseToTeacher(course,teacherSession)}"
 			value="Save course" />
 	</h:form>
+
 	<br />
 	<ui:include src="/footer.xhtml" />
-</h:body>
-</html>
+</ui:composition>
