Added: 	- student registration 	- student key generation

--- a/CourseFeedback/WebContent/course-list.xhtml
+++ b/CourseFeedback/WebContent/course-list.xhtml
@@ -1,5 +1,5 @@
 <!-- Display a list of courses -->
-<!-- Uses courseList variable to get the list of courses -->
+<!-- Use courseList variable to get the list of courses -->
 
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:f="http://java.sun.com/jsf/core"
