--- a/CourseFeedback/WebContent/teacher-login.xhtml
+++ b/CourseFeedback/WebContent/teacher-login.xhtml
@@ -21,9 +21,9 @@
 		</p>
 
 		<h:commandButton value="Login"
-			action="#{basicTeacherLoginManager.login(teacher.userName,teacher.password)}" />
+			action="#{teacherLoginManager.login(teacher.userName,teacher.password)}" />
 
 		<br />
-		<h:outputText value="#{basicTeacherLoginManager.message}" />
+		<h:outputText value="#{teacherLoginManager.message}" />
 	</h:form>
 </ui:composition>
