--- a/CourseFeedback/WebContent/studentLogin.xhtml
+++ b/CourseFeedback/WebContent/studentLogin.xhtml
@@ -7,10 +7,10 @@
 	<title>Student Login</title>
 </h:head>
 <h:body>
-	<h:form>
+	<!-- <h:form>
 		<p><h:outputText value="#{studentManager.getParameter()}"/></p>
 		<h:commandButton type="submit" value="Back" action="studentRegister"></h:commandButton>	
-	</h:form>
+	</h:form> -->
 </h:body>
 </html>
 
