--- a/CourseFeedback/WebContent/course-page.xhtml
+++ b/CourseFeedback/WebContent/course-page.xhtml
@@ -66,7 +66,7 @@
 		<h:inputText value="#{student.studentNumber}" />
 
 		<h:commandButton value="Add student"
-			action="#{studentManager.addStudentToCourse(student.studentNumber,courseId)}">
+			action="#{studentManager.addStudentToCourse(student.studentNumber,courseid)}">
 			<f:param name="courseid" value="#{courseid}" />
 		</h:commandButton>
 	</h:form>
