--- a/CourseFeedback/WebContent/studentCourseList.xhtml
+++ b/CourseFeedback/WebContent/studentCourseList.xhtml
@@ -6,15 +6,14 @@
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
 <head>
-<title>My CourseList</title>
+<title>My Course List</title>
 </head>
 
 <body>
 	<h:form id="mycourses">
-		<h1>MyCourse List</h1>
+		<h1>My Course List</h1>
 
-		<h:dataTable
-			value="#{basicCourseManager.getCoursesByStudentKey(1234)}"
+		<h:dataTable value="#{courseManager.getCoursesByStudentKey(1234)}"
 			var="course" styleClass="order-table"
 			headerClass="order-table-header"
 			rowClasses="order-table-odd-row,order-table-even-row">
@@ -57,8 +56,6 @@
 
 
 		</h:dataTable>
-
-
 	</h:form>
 </body>
 </html>
