--- a/CourseFeedback/WebContent/teacherProfile.xhtml
+++ b/CourseFeedback/WebContent/teacherProfile.xhtml
@@ -19,11 +19,15 @@
 
 	<h2>Name</h2>
 
-	<h:outputText value="#{teacherSession}" />
+	<h:outputText value="#{sessionTeacherId}" />
 
 	<h2>Course List</h2>
 
-	<ui:include src="/my-courses.xhtml" />
+	<ui:include src="/modules/course/courseList.xhtml">
+		<ui:param name="courses"
+			value="#{courseManager.getCoursesByTeacherId(sessionTeacherId)}" />
+	</ui:include>
+
 	<br />
 
 	<h2>Add Course</h2>
