--- a/CourseFeedback/WebContent/footer.xhtml
+++ b/CourseFeedback/WebContent/footer.xhtml
@@ -5,5 +5,5 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:ui="http://java.sun.com/jsf/facelets">
 
-	<h:link value="Back to teacher index" outcome="teacherHome"></h:link>
+	<h:link value="Back to teacher index" outcome="/teacherHome" />
 </ui:composition>
