--- a/CourseFeedback/WebContent/modules/course/courseList.xhtml
+++ b/CourseFeedback/WebContent/modules/course/courseList.xhtml
@@ -9,20 +9,44 @@
 	xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
 	xmlns:f="http://java.sun.com/jsf/core">
 
-	<c:choose>
-		<c:when test="#{empty courses}">
-			<h:outputText value="No courses yet" />
-		</c:when>
+	<h:dataTable value="#{courses}" var="course" styleClass="order-table"
+		headerClass="order-table-header"
+		rowClasses="order-table-odd-row,order-table-even-row">
 
-		<c:otherwise>
-			<c:forEach items="#{courses}" var="course">
-				<h:outputLink value="course-page.xhtml">
-					<f:param name="courseid" value="#{course.courseId}" />
-					<h:outputText value="#{course.name}" />
-				</h:outputLink>
-				<br />
-			</c:forEach>
-		</c:otherwise>
+		<h:column>
+			<f:facet name="header">
+				<h:outputText value="Course Code" />
+			</f:facet>
 
-	</c:choose>
+			<h:link value="#{course.courseCode}"
+				outcome="/modules/course/course-page">
+				<f:param name="courseid" value="#{course.courseId}" />
+			</h:link>
+
+		</h:column>
+
+		<h:column>
+			<f:facet name="header">
+				<h:outputText value="Course Name" />
+			</f:facet>
+			<h:outputText value="#{course.name}" />
+		</h:column>
+
+		<!-- 				<h:column> -->
+		<!-- 					<f:facet name="header"> -->
+		<!-- 						<h:outputText value="Course Period" /> -->
+		<!-- 					</f:facet> -->
+		<!-- 					<h:outputText value="#{course.startTime}- #{course.endTime}" /> -->
+		<!-- 				</h:column> -->
+		<!-- 				<h:column> -->
+
+		<!-- 					<f:facet name="header"> -->
+		<!-- 						<h:outputText value="Submit Feedback" /> -->
+		<!-- 					</f:facet> -->
+		<!-- 					<h:outputLink value="give_feedback.xhtml"> -->
+		<!-- 						<f:param name="courseid" value="#{course.courseId}" /> -->
+		<!-- 						<h:outputText value="give feedback" /> -->
+		<!-- 					</h:outputLink> -->
+		<!-- 				</h:column> -->
+	</h:dataTable>
 </ui:composition>
