--- a/CourseFeedback/WebContent/modules/course/courseList.xhtml
+++ b/CourseFeedback/WebContent/modules/course/courseList.xhtml
@@ -2,6 +2,7 @@
 
 <!-- Params: -->
 <!-- courses: The list of courses to display -->
+<!-- coursePage: The name of the course page to redirect all courses -->
 
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
@@ -15,11 +16,10 @@
 
 		<h:column>
 			<f:facet name="header">
-				<h:outputText value="Course Code" />
+				<h:outputText value="Code" />
 			</f:facet>
 
-			<h:link value="#{course.courseCode}"
-				outcome="/modules/course/course-page">
+			<h:link value="#{course.courseCode}" outcome="#{coursePage}">
 				<f:param name="courseid" value="#{course.courseId}" />
 			</h:link>
 
@@ -27,7 +27,7 @@
 
 		<h:column>
 			<f:facet name="header">
-				<h:outputText value="Course Name" />
+				<h:outputText value="Name" />
 			</f:facet>
 			<h:outputText value="#{course.name}" />
 		</h:column>
